[notice] fix notice height on firefox while display table

--- a/src/modules/notice/_style.scss
+++ b/src/modules/notice/_style.scss
@@ -105,6 +105,7 @@
   }
   &.fit-text {
     display: table;
+    height: 60px;
 
     .notice-content {
       display: table-cell;
